<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Concussean</string>
    <string name="btn_concussed">Start</string>
    <string name="btn_references">References</string>
    <string name="btn_post">Post-Treatment Advice</string>
    <string name="btn_play">Return to Play</string>
    <string name="action_home">Home</string>
    <string name="action_restart">Restart</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_diagnose">Diagnose</string>
    <string name="title_activity_post">Post-Treatment Advice</string>
    <string name="title_activity_ref">References</string>
    <string name="title_activity_outcome1">Concussean</string>
    <string name="seek">Seek immediate medical attention</string>
    <string name="seek2">Seek medical attention if symptoms worsen or do not fade within 24 hours: </string>
    <string name="phone">Phone NHS 24 on 111 for medical advice</string>
    <string name="due">Due to the risk of delayed onset of symptoms do not play sports, drive or drink alcohol or leave him/her alone for the next 24 hours. </string>
    <string name="outcome3seek">Seek medical advice or reassess if new symptoms appear.</string>
    <string name="title_activity_outcome2">Concussean</string>
    <string name="title_activity_outcome3">Concussean</string>
    <string name="font_small">Aa</string>
    <string name="font_medium">Aa</string>
    <string name="font_large">Aa</string>
    <string name="ref_1">• Scottish Intercollegiate Guidelines Network, 110 Early Management of Patients with a Head Injury, http://www.sign.ac.uk/pdf/sign110.pdf</string>
    <string name="ref_2">• Harmon KG, Drezner JA, Gammons M, et al. American Medical Society for Sports Medicine position statement: concussion in sport, Br J Sports Med 2013,47, 15–26 http://bjsm.bmj.com/content/47/1/15.full</string>
    <string name="ref_3">• McCrory P, Meeuwisse WH, Aubry M,et al. Consensus statement on concussion in sport: the 4th International Conference on Concussion in Sport held in Zurich, November 2012, Br J Sports Med 2013;47:250–258. http://bjsm.bmj.com/content/47/5/250.full </string>
    <string name="title_activity_general">General</string>
    <string name="title_activity_return_to_play">ReturnToPlay</string>

</resources>
