<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.concussean.main.concussean.Diagnose">
    <item android:id="@+id/action_home" android:title="@string/action_home"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_restart" android:title="@string/action_restart"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />
    <!--<item android:id="@+id/action_font" android:title="@string/action_font"-->
        <!--android:orderInCategory="100" app:showAsAction="never">-->
        <!--<menu>-->
            <!--<item android:id="@+id/action_font_small" android:title="@string/action_font_small"-->
                <!--android:orderInCategory="100" app:showAsAction="never" />-->
            <!--<item android:id="@+id/action_font_medium" android:title="@string/action_font_medium"-->
                <!--android:orderInCategory="100" app:showAsAction="never" />-->
            <!--<item android:id="@+id/action_font_large" android:title="@string/action_font_large"-->
                <!--android:orderInCategory="100" app:showAsAction="never" />-->
        <!--</menu>-->
    <!--</item>-->


</menu>
