<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_concussed"
            android:textColor="#ffe8e8e8"
            android:background="#80D314"
            style="@android:style/ButtonBar"
            android:layout_gravity="center_vertical" />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/post_treatment_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_post"
            android:textColor="#ffe8e8e8"
            android:background="#ff3564ff"
            style="@android:style/ButtonBar" />
       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/references_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_references"
            android:textColor="#ffe8e8e8"
            android:background="#ff3564ff"
            style="@android:style/ButtonBar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>
</LinearLayout>
