<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff94c0ff"
    tools:context="com.concussean.main.concussean.Outcome2">

    <TextView android:text="@string/seek2" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:id="@+id/seek" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/phone"
        android:layout_below="@+id/seek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="or"
        android:id="@+id/or1"
        android:layout_below="@+id/phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Contact GP Practice/Physio"
        android:id="@+id/contact"
        android:layout_below="@+id/or1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/due"
        android:id="@+id/due"
        android:layout_below="@+id/contact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"/>


</RelativeLayout>
